<resources>
    <string name="app_name">Spotify\nClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="good_evening_txt">Good Evening</string>
    <string name="default_podcast_title">Podcast Title</string>
    <string name="default_large_text">pe specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</string>
    <string name="all_episodes_txt">Todos los episodios</string>
    <string name="default_date">12 Mayo</string>
    <string name="default_time">24 min</string>
    <string name="show_you_might_like_text">Shows que te podrian gustar</string>
    <string name="audio_clips_title_text">Audio clips que te podrian interesar</string>

    <string name="no_internet_connection_txt">No hay conexión a internet</string>
    <string name="activate_data_wifi_txt">Activa los datos moviles o conectate a Wi-Fi.</string>
    <string name="connect_txt">Conectarse</string>
    <string name="no_internet_connection_available_txt">No hay conexión a internet disponible</string>
    <string name="audio_clips_txt">Audio clips</string>
    <string name="no_dedscription_txt">Sin descripción</string>
    <string name="greetings_txt">Saludos</string>
    <string name="good_morning_txt">Buenos Dias</string>
    <string name="good_afternoon_txt">Buenas Tardes</string>
    <string name="good_night_txt">Buenos Noches</string>

</resources>