<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_audio_clip"
    android:background="@color/black">


    <ImageView
        android:id="@+id/imv_podcast"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_spotify_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/podcast_title"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:maxLines="2"
        android:text="@string/default_podcast_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imv_podcast"
        app:layout_constraintStart_toEndOf="@+id/imv_podcast"
        app:layout_constraintTop_toTopOf="@+id/imv_podcast"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/podcast_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:maxLines="3"
        android:text="@string/default_podcast_title"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_podcast" />

    <TextView
        android:id="@+id/podcast_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/default_date"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcast_description" />

    <TextView
        android:id="@+id/podcast_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/default_time"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@id/podcast_date"
        app:layout_constraintTop_toBottomOf="@+id/podcast_description" />

    <RelativeLayout
        android:id="@+id/content_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/podcast_date">

        <ImageView
            android:id="@+id/im_action_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_action_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/gray"/>


</androidx.constraintlayout.widget.ConstraintLayout>