<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inactive_black">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/inactive_card_gray"
        app:cardBackgroundColor="#404040"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="170dp"
        android:layout_height="167dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="128dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="170dp"
        android:layout_height="167dp"
        android:layout_marginStart="12dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <View
        android:id="@+id/view"
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout" />

    <View
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout2" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="170dp"
        android:layout_height="167dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="170dp"
        android:layout_height="167dp"
        android:layout_marginStart="12dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout3"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout3" />

    <View
        android:id="@+id/view3"
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout3" />

    <View
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/inactive_card_gray"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout4"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout4" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_alert_reconnection"
        android:layout_width="350dp"
        android:layout_height="107dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/no_internet_connection_txt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_data_wifi_txt"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_txt"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/spotify_green"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>